--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
 }
 
 #sidebar {
+    grid-row: 1 / -1;
     display: flex;
     flex-flow: column wrap;
     gap: 30px;
@@ -110,4 +111,25 @@ body {
     border-style: solid;
     border-radius: 20px;
     background-color: lightblue;
+}
+
+#main-content {
+    grid-column: 2 / -1;
+    display: grid;
+    padding: 25px;
+}
+
+#cards {
+    display: grid;
+    grid-template-columns: 0.5fr 0.5fr;
+    gap: 20px;
+}
+
+.card {
+    height: 200px;
+    width: 450px;
+    border: 8px solid white;
+    border-left-color: lightblue;
+    border-radius: 10px;
+    padding: 15px;
 }
