--- a/styles.css
+++ b/styles.css
@@ -126,10 +126,16 @@ body {
 }
 
 .card {
-    height: 200px;
     width: 450px;
     border: 8px solid white;
     border-left-color: lightblue;
     border-radius: 10px;
     padding: 15px;
+}
+
+.project-action {
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    margin-right: 5px;
 }
