--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,12 @@ h3 {
     border-radius: 50px;
 }
 
+.medium-logo {
+    height: 75px;
+    width: 75px;
+    border-radius: 37px;
+}
+
 #logo-large {
     grid-column: 1 / 3;
     display: flex;
@@ -99,6 +105,7 @@ h3 {
 
 .name {
     font-size: 1.25rem;
+    font-weight: bold;
 }
 
 #buttons {
@@ -124,6 +131,7 @@ h3 {
     grid-template-rows: 1fr 1fr;
     background-color: #E2E8F0;
     padding: 25px;
+    padding-bottom: 0;
 }
 
 .header {
@@ -131,8 +139,11 @@ h3 {
     margin-bottom: 20px;
 }
 
-#cards {
+#card-section {
     grid-row: 1 / -1;
+}
+
+#cards {
     display: grid;
     grid-template-columns: 0.5fr 0.5fr;
     gap: 20px;
@@ -154,11 +165,15 @@ h3 {
     margin-right: 5px;
 }
 
-#announcements {
+#announcements, #trending-people {
     background-color: white;
     border: 8px solid white;
     border-radius: 10px;
     padding: 25px;
+}
+
+#announcement-section {
+    grid-row: 1 / 2;
 }
 
 .announcement-card {
@@ -168,4 +183,18 @@ h3 {
 
 .announcement-card > p {
     margin-top: 5px;
+}
+
+#trending-section {
+    grid-row: 2 / -1;
+}
+
+.trending-header {
+    margin-top: 25px;
+}
+
+.trending-person {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 15px;
 }
