Updated project card sizing

--- a/styles.css
+++ b/styles.css
@@ -144,13 +144,16 @@ h3 {
 }
 
 #cards {
+    height: 1000px;
     display: grid;
     grid-template-columns: 0.5fr 0.5fr;
-    gap: 20px;
+    gap: 40px;
+    padding: 0 20px 20px 0;
 }
 
 .card {
-    width: 450px;
+    min-width: 450px;
+    min-height: 250px;
     background-color: white;
     border: 8px solid white;
     border-left-color: lightblue;
