--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 ul {
@@ -73,6 +74,10 @@ h3 {
     height: 100px;
 }
 
+#username {
+    font-weight: bold;
+}
+
 .logo {
     height: 50px;
     width: 50px;
@@ -104,7 +109,7 @@ h3 {
 }
 
 .name {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 
@@ -161,11 +166,15 @@ h3 {
     padding: 15px;
 }
 
+.subtext {
+    color: #4B5563;
+}
+
 .project-action {
     display: flex;
     justify-content: flex-end;
     gap: 20px;
-    margin-right: 5px;
+    margin: 80px 5px 0 0;
 }
 
 #announcements, #trending-people {
@@ -200,4 +209,22 @@ h3 {
     display: flex;
     gap: 20px;
     margin-bottom: 15px;
+}
+
+.trending-person-name {
+    font-size: 1.2rem;
+}
+
+.trending-person p {
+    margin: 0;
+}
+
+.role {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.title {
+    font-size: 0.9rem;
 }
